--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
+    script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://ajax.googleapis.com;
+    ">
     <title>YouTube Video Downloader</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="stylesheet" href="/css/main.css" />
@@ -21,6 +26,6 @@
             </footer>
         </div>
     </main>
-    <script src="/JS/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
